Changed layout, added icons to buttons

--- a/index.html
+++ b/index.html
@@ -36,26 +36,29 @@
             </div>
 			
 			<div class="row cont">
-				<div class="col-md-2">
-				</div>
 				<div class="col-md-4">
-					<a href="http://brcmapsteam.github.io/Europe_migrants_sitrep/" target="_blank" class="button">
-						<span>Interactive Overview of the RC Response</span>
+					<a href="http://brcmapsteam.github.io/Europe_migrants_sitrep/" target="_blank" class="button icon pos">
+						<span>Response Indicator Dashboard</span>
+					</a> 
+				</div>				
+				<div class="col-md-4">
+					<a href="https://www.dropbox.com/sh/1gklb56y1bpoklq/AABBVE2RFHI9icbJFfCCuCDQa?dl=0" target="_blank" class="button icon pos">
+						<span>Operations and Deployment Maps</span>
 					</a>
 				</div>
 				<div class="col-md-4">
-					<a href="https://www.dropbox.com/sh/p19giq0vq2f6ojs/AADW4necKRhtAfCDVZmzgcUba?dl=0" target="_blank" class="button">
-						<span>Weekly RC Response Indicator Maps</span>
+					<a href="https://www.dropbox.com/sh/p19giq0vq2f6ojs/AADW4necKRhtAfCDVZmzgcUba?dl=0" target="_blank" class="button icon pos">
+						<span>Weekly Response Indicator Maps</span>
 					</a>
-				</div>
-				<div class="col-md-2">
-				</div>
+				</div>				
 			</div>
 			
 			<div class="row cont">
+				<div class="col-md-2">
+				</div>
 				<div class="col-md-4">
 					<a href="https://www.dropbox.com/sh/97zlo0llrjvwqky/AAC-iGGE6DwJ8q0s41XqFA7pa?dl=0" target="_blank" class="button">
-						<span>External Actors Maps/Data</span>
+						<span>External Actor Maps / Data</span>
 					</a>
 				</div>
 				<div class="col-md-4">
@@ -63,10 +66,7 @@
 						<span>Basemaps / General Infrastructure Maps</span>
 					</a>
 				</div>
-				<div class="col-md-4">
-					<a href="https://www.dropbox.com/sh/1gklb56y1bpoklq/AABBVE2RFHI9icbJFfCCuCDQa?dl=0" target="_blank" class="button">
-						<span>RC Operations and Deployments Maps</span>
-					</a>
+				<div class="col-md-2">
 				</div>
 			</div>
 			
