Changed text & logo file

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     <body>
         <div class="container">
             <div class="row">
-				<div class="col-md-9">
+				<div class="col-md-8">
 					<p class="title spacer">IM: Europe Population Movement Response</p>
 					<p class="titledesc">Welcome to the IFRC landing page for cartographic and data products related to the population movement response in Europe.</p>
-					<p class="titledesc">If you don't find what you're looking for, contact us at <a href="mailto:im.migration@ifrc.org?subject=IM_Europe-resources-online-feedback">im.migration@ifrc.org</a> and we will help you find it or work with you to develop something new.</p>
 				</div>
-				<div class="col-md-3 spacer-md">
+				<div class="col-md-4 spacer-md">
 					<p>
 					<img src="http://www.ifrc.org/Global/ifrc.org/Logos/IFRC-logo.gif" height="32">
 					<br/>
-					<h5>Produced by SIMS supported by ARC and BRC</h5>
+					<h5 class="desc">Produced by SIMS supported by ARC and BRC</h5>
+					<h5 class="desc">Buttons with <img class="logo" src="css/rcrc.gif"></img> contain data products for internal use within RC/RC only. Please see the <a href="http://fednet.ifrc.org/migrationineurope" target=_blank">IFRC's FedNet</a> for information that can be used externally.</h5>
 					</p>
 				</div>
             </div>
@@ -67,6 +67,12 @@
 					</a>
 				</div>
 				<div class="col-md-2">
+				</div>
+			</div>
+			
+			 <div class="row">
+				<div class="col-md-12">
+					<p class="footnote">If you don't find what you're looking for, contact us at <a href="mailto:im.migration@ifrc.org?subject=IM_Europe-resources-online-feedback">im.migration@ifrc.org</a> and we will help you find it or work with you to develop something new.</p>
 				</div>
 			</div>
 			
