--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			
 			 <div class="row">
 				<div class="col-md-12">
-					<p class="footnote">If you don't find what you're looking for, contact us at <a href="mailto:im.migration@ifrc.org?subject=IM_Europe-resources-online-feedback">im.migration@ifrc.org</a> and we will help you find it or work with you to develop something new.</p>
+					<p class="footnote">If you don't find what you're looking for, contact us at <a href="mailto:im.migration@ifrc.org?subject=IM_Europe-resources-online-feedback">im.migration@ifrc.org</a> and we'll help you find it or work with you to develop something new.</p>
 				</div>
 			</div>
 			
